<resources>
    <string name="recordNoSD">No SDcard or SDcard Not available</string>
    <string name="storage_is_full">SDcard is full</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access unsuccessful.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">complete</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="menu_recorder">Recorder</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional Call Settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call Forward</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding to {0}</string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_carrier_select">Select a network operator</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Complete</string>
    <string name="selectContact">select contact</string>
    <string name="local_name">Input Name</string>
    <string name="local_number">Input Number</string>
    <string name="call_restriction_setting">Call Barring</string>
    <string name="call_restriction_cancel">Call barring cancel</string>
    <string name="cancel_all_barring">Cancel all barring</string>
    <string name="callbarring_passwd_change">Change password</string>
    <string name="passwd_enter_old">Old Calls Barring password</string>
    <string name="passwd_enter_ok">OK</string>
    <string name="passwd_enter_cancel">Cancel</string>
    <string name="dial_save">Save</string>
    <string name="dial_cancel">Cancel</string>
    <string name="input_number">Input Number</string>
    <string name="barring_ao">All outgoing</string>
    <string name="barring_oi">Outgoing internal</string>
    <string name="barring_ox">Outgoing internal roam</string>
    <string name="barring_ai">All Incoming</string>
    <string name="barring_ir">Incoming calls on roam</string>
    <string name="fdn_delete">Delete</string>
    <string name="fdn_cancel">Cancel</string>
    <string name="bar_enter_password">Input password</string>
    <string name="call_setting_input_content">input content</string>
    <string name="speed_dial_delete">Delete</string>
    <string name="str_preferred_plmn_list">Preferred PLMN List</string>
    <string name="str_summary_preferred_plmn_list">Preferred PLMN List</string>
    <string name="str_preferred_plmn_list_index">Index</string>
    <string name="str_preferred_plmn_list_name">Network Name</string>
    <string name="str_preferred_plmn_list_id">Network ID</string>
    <string name="str_preferred_plmn_list_gsm_act">GSM Access Modem</string>
    <string name="str_preferred_plmn_list_gsm_act_on">GSM Access Modem On</string>
    <string name="str_preferred_plmn_list_gsm_act_off">GSM Access Modem Off</string>
    <string name="str_preferred_plmn_list_gsm_compact_act">GSM Compact Access Modem</string>
    <string name="str_preferred_plmn_list_gsm_compact_act_on">GSM Compact Access Modem On</string>
    <string name="str_preferred_plmn_list_gsm_compact_act_off">GSM Compact Access Modem Off</string>
    <string name="str_preferred_plmn_list_utran_act">UTRAN Access Modem</string>
    <string name="str_preferred_plmn_list_utran_act_on">UTRAN Access Modem On</string>
    <string name="str_preferred_plmn_list_utran_act_off">UTRAN Access Modem Off</string>
    <string name="str_preferred_plmn_list_access_mode">Access Modem</string>
    <string name="pref_title_sd">Speed dial</string>
    <string name="barry_outgoing">Outgoing Barring</string>
    <string name="barry_incoming">Incoming Barring</string>
    <string name="barry_alloutgoing">All Outgoing</string>
    <string name="barry_outgoinginter">Outgoing International</string>
    <string name="barry_outgoingroaming">Outgoing Roaming</string>
    <string name="barry_allincoming">All Incoming</string>
    <string name="barry_incomeroaming">Income when Roaming</string>
    <string name="alternative_Enable">Enable</string>
    <string name="alternative_Pick">Pick</string>
    <string name="alternative_Disable">Disable</string>
    <string name="dlg_old_password">Old</string>
    <string name="dlg_new_password">New</string>
    <string name="dlg_confirm_password">Confirm</string>
    <string name="dlg_set_ok">OK</string>
    <string name="dlg_set_cancel">cancel</string>
    <string name="dlg_title_sd">Speed dialing number</string>
    <string name="pref_title_sd_num2">Key2</string>
    <string name="pref_title_sd_num3">Key3</string>
    <string name="pref_title_sd_num4">Key4</string>
    <string name="pref_title_sd_num5">Key5</string>
    <string name="pref_title_sd_num6">Key6</string>
    <string name="pref_title_sd_num7">Key7</string>
    <string name="pref_title_sd_num8">Key8</string>
    <string name="pref_title_sd_num9">Key9</string>
    <string name="menu_record">Record</string>
    <string name="menu_unrecord">Stop Recording</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_unhold">Unhold</string>
    <string name="menu_swap">Swap</string>
    <string name="menu_answer_and_hold">Hold current and answer</string>
    <string name="menu_answer_and_end">End current and answer</string>
</resources>