<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ApnSettings" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/networks" android:key="button_carrier_sel_key" android:summary="@string/sum_carrier_select">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.NetworkSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/str_preferred_plmn_list" android:key="preference_preferred_plmn_list_key" android:summary="@string/str_summary_preferred_plmn_list"> android:persistent="false">
<intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.PreferredPlmnList" />
    </PreferenceScreen>
</PreferenceScreen>