<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/pinc" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/name" />
            <EditText android:id="@id/fdn_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:hint="@string/call_setting_input_content" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="words" android:autoText="false" android:inputType="textPersonName" android:imeOptions="actionNext" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/number" />
            <EditText android:id="@id/fdn_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:hint="@string/call_setting_input_content" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false" android:inputType="phone" android:imeOptions="actionDone" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" style="?android:attr/buttonBarStyle" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
            <Button android:id="@id/fdn_cancel" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fdn_cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:id="@id/fdn_del" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fdn_delete" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:id="@id/fdn_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/save" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>