<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/citytime_listview" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/local_name" />
        <EditText android:id="@id/localname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:hint="@string/call_setting_input_content" android:scrollHorizontally="true" android:singleLine="true" android:maxLength="14" android:capitalize="words" android:autoText="false" android:inputType="textPersonName" android:imeOptions="actionNext" />
    </LinearLayout>
    <LinearLayout android:id="@id/citytime_listview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/local_number" />
        <EditText android:id="@id/localnumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:hint="@string/call_setting_input_content" android:scrollHorizontally="true" android:singleLine="true" android:maxLength="20" android:capitalize="words" android:autoText="false" android:inputType="number" android:imeOptions="actionNext" />
    </LinearLayout>
    <View android:background="?android:dividerHorizontal" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
        <Button android:id="@id/localcancelbtn" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dial_cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@id/localsavebtn" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dial_save" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>