<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/pinc" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/dlg_old_password" />
            <EditText android:id="@id/old_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="words" android:autoText="false" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/dlg_new_password" />
            <EditText android:id="@id/new_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingLeft="10.0dip" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/dlg_confirm_password" />
            <EditText android:id="@id/confirm_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="25.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/dlg_set_ok" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:text="@string/dlg_set_ok" />
            <Button android:id="@id/dlg_set_cancel" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:text="@string/dlg_set_cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>